--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: "docs"
 
 website:
   title: "EidÖ WiSe22"
@@ -7,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-
+  
 format:
   html:
     theme: darkly
