--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,10 +6,10 @@ website:
   title: "EidÖ WiSe22"
   navbar:
     left:
-      - href: index.qmd
-        text: ""
       - href: Vorlesung.qmd
         text: "Vorlesung"
+      - href: uebung.qmd
+        text: "Übung"
   
 format:
   html:
