--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,9 +10,16 @@ website:
         text: "Vorlesung"
       - href: uebung.qmd
         text: "Übung"
+    right:
+      - icon: github
+        href: https://github.com/mca91
+        aria-label: GitHub
+      - icon: git
+        href: https://github.com/mca91/Eidoe22
+        aria-label: GitHub
   page-footer:
-    center: "Written by Martin Arnold using <a href='https://quarto.org'>Quarto</a> &centerdot; Licensed under <a href='https://creativecommons.org/licenses/by-sa/4.0/'>CC BY-SA 4.0</a>"
-
+    center: "Content by Martin Arnold. Built using <a href='https://quarto.org'>Quarto</a> &centerdot; Licensed under <a href='https://creativecommons.org/licenses/by-sa/4.0/'>CC BY-SA 4.0</a>"
+  open-graph: true
   
 format:
   html:
